--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
-    "start": "npm run build && babel-watch --watch src src/main.js"
+    "start": "npm run build && babel-watch --watch src src/server/server.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-watch": "^7.0.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
