--- a/src/client/package.json
+++ b/src/client/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "d3": "^5.12.0",
     "react": "^16.11.0",
-    "react-cytoscape": "^1.0.6",
+    "react-d3-graph": "^2.3.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
