--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist",
-    "start": "npm run build && babel-watch --watch src src/server/server.js"
+    "build": "babel src -d dist --ignore client/node_modules/**/*.js",
+    "start": "npm run build && babel-watch --watch src src/server/runBenchmark.js"
   },
   "repository": {
     "type": "git",
