--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d dist --ignore client/node_modules/**/*.js",
-    "start": "npm run build && babel-watch --watch src src/server/runBenchmark.js"
+    "build": "babel src --out-dir dist --ignore '**/node_modules/**/*.js'",
+    "start": "npm run build && node dist/server/runBenchmark.js"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/rvailleux/energy-system#readme",
   "devDependencies": {
     "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
     "@babel/preset-env": "^7.7.1",
-    "babel-watch": "^7.0.0"
+    "@babel/preset-flow": "^7.7.4",
+    "babel-watch": "^7.0.0",
+    "nodemon": "^2.0.1"
   },
   "dependencies": {
     "express": "^4.17.1"
