--- a/src/client/package.json
+++ b/src/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.7.4",
     "d3": "^5.12.0",
     "react": "^16.11.0",
     "react-d3-graph": "^2.3.0",
@@ -29,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.0"
   }
 }
